--- a/config/main.ini
+++ b/config/main.ini
@@ -1,13 +1,13 @@
 ##获取数据基本信息
 [export]
 ##获取数据的起止百分比，以小数表示start=0.3,end=0.5表示取表中30%-50%的数据
-start=0.003
+start=0.03
 end=0.015
 ##在获取数据的起止百分比内，如果数量足够取多少条，0表示全部
 length=1000
-##加密规则 方法名对应相关表字段列表  考虑库
+##加密规则 方法名对应相关表字段列表表.字段  (考虑库分库后库.表.字段)
 [rules]
 ##末尾5位加密，用于类似手机号字段加密
 suffix_encrypt=a.mobile,b.phone
-##开头3位加密，用于类似邮箱机密
+##开头3位加密或者@符号前加密，用于类似邮箱机密
 prefix_encrypt=x.email'
